--- a/FollowAlong/index.html
+++ b/FollowAlong/index.html
@@ -7,6 +7,107 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>What are you?</h1>
+<ul>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+    <li>I am a Tree</li>
+</ul>
 </body>
 </html>
