Made change to followalong

--- a/FollowAlong/index.html
+++ b/FollowAlong/index.html
@@ -4,110 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week2A1</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>What are you?</h1>
-<ul>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-    <li>I am a Tree</li>
-</ul>
+
+    <ul>2</ul>
+    <ul>3</ul>
+    <ul>4</ul>
+    <ul>5</ul>
+    <ul>6</ul>
+    <ul>7</ul>
+    <ul>8</ul>
+    <ul>9</ul>
+    <ul>10</ul>
+    
+    <div></div></div>
+
 </body>
 </html>
